--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/f14fb4f652.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,7 +31,7 @@
                 <h1 class="banner-title">Mary Ha</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments. </p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -155,7 +157,7 @@
 
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
 
         </section>
