--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments. </p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+
+                <button class="btn-primary" id="btn"> <i class="fa-solid fa-phone"></i>  Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
